objects/Account_Team_Member__c.object
<CustomObject>
    <description>This object replace the standard funcionality for adding team members to accounts.</description>
    <fields>
        <fullName>Account_Owner_Id__c</fullName>
        <formula>Organisation__r.Id</formula>
        <label>Account Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Access__c</fullName>
        <label>Relationship Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                    <default>true</default>
                    <label>Read Only</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Relationship Team Members</relationshipLabel>
        <relationshipName>Account_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organisation_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Banker</fullName>
                </value>
                <value>
                    <fullName>Alternate Coverage Support Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>BRSG Relationship Manager</fullName>
                </value>
                <value>
                    <fullName>BRSG Segment Head</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Client Solutions</fullName>
                </value>
                <value>
                    <fullName>Corridor Banker</fullName>
                </value>
                <value>
                    <fullName>Coverage Banker</fullName>
                </value>
                <value>
                    <fullName>Coverage Support Manager</fullName>
                </value>
                <value>
                    <fullName>Coverage Team Head</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>Credit Manager</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>ECM (Banking)</fullName>
                </value>
                <value>
                    <fullName>EDC Consultant</fullName>
                </value>
                <value>
                    <fullName>GRD</fullName>
                </value>
                <value>
                    <fullName>Investment and Banking</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Liquidity Sales</fullName>
                </value>
                <value>
                    <fullName>M&amp;A Advisory (Banking)</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>New Business Development</fullName>
                </value>
                <value>
                    <fullName>Other Product Area</fullName>
                </value>
                <value>
                    <fullName>Regional Banker</fullName>
                </value>
                <value>
                    <fullName>Regional TPS Partner</fullName>
                </value>
                <value>
                    <fullName>RSG</fullName>
                </value>
                <value>
                    <fullName>Senior Sponsor</fullName>
                </value>
                <value>
                    <fullName>STCF Consultant</fullName>
                </value>
                <value>
                    <fullName>Syndication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Barclays_AccountTeamMember__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays AccountTeamMember</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Client Relationship Team Member</label>
    <nameField>
        <displayFormat>ATM-{000000}</displayFormat>
        <label>Client Relationship Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Relationship Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_from_changing_Team_Member_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Team_Member__c)</errorConditionFormula>
        <errorDisplayField>Team_Member__c</errorDisplayField>
        <errorMessage>Please don&apos;t change the value of this field.</errorMessage>
    </validationRules>
</CustomObject>